[gd_scene load_steps=2 format=3 uid="uid://cgk4wemgf5165"]

[ext_resource type="Script" uid="uid://dnlb7kpmtgtkk" path="res://src/EventScene.gd" id="1_kk3g0"]

[node name="EventScene" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_kk3g0")

[node name="UI" type="CanvasLayer" parent="."]

[node name="UIRoot" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SpeakerLabel" type="Label" parent="UI/UIRoot"]
layout_mode = 1
anchors_preset = -1
offset_left = 500.0
offset_top = 230.0
offset_right = 740.0
offset_bottom = 272.0
theme_override_font_sizes/font_size = 25

[node name="TextLabel" type="Label" parent="UI/UIRoot"]
layout_mode = 0
offset_left = 345.00003
offset_top = 289.0
offset_right = 385.00003
offset_bottom = 312.0
scale = Vector2(1.3913656, 1.293188)

[node name="NextButton" type="Button" parent="UI/UIRoot"]
layout_mode = 0
offset_left = 461.0
offset_top = 426.0
offset_right = 801.0
offset_bottom = 482.0
